fix(clinical history): Se actualiza la construcción de una HC